fix scrolling issue where horizontal scroll-bar was appearing outside of container

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ p {
 .container { 
   max-width: 24em;
   margin: auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .vis-container {
@@ -47,6 +49,8 @@ p {
   max-width: 100vw;
   padding-left: 4vw;
   padding-right: 4vw;
+  position: relative;
+  overflow: hidden;
 }
 
 .bubble-container {
